Fix alignment on login UI

--- a/src_new/label-dashboard-web/src/app/pages/login/login.component.scss
+++ b/src_new/label-dashboard-web/src/app/pages/login/login.component.scss
@@ -23,6 +23,7 @@
   .input-group {
     width: 100%;
     margin-bottom: 10px;
+    margin-top: 10px; // Match the external CSS margin
     display: flex !important;
     align-items: stretch !important;
     
@@ -38,6 +39,7 @@
         border-right: none !important;
         width: 50px !important;
         height: auto !important;
+        margin-top: 0 !important; // Override inline margin
       }
     }
     
@@ -45,6 +47,7 @@
       flex: 1 !important;
       border-radius: 0 5px 5px 0 !important;
       border-left: none !important;
+      margin-top: 0 !important; // Override external CSS margin since container handles it
     }
   }
   
